--- a/GeoAngular/app/styles/print.css
+++ b/GeoAngular/app/styles/print.css
@@ -48,3 +48,8 @@ body {
 .checkbox {
     visibility: hidden;
 }
+
+#upperMapWrapper{
+    overflow: hidden;
+    position: relative;
+}
